[tool.poetry]
name = "embassaments"
version = "0.1.0"
description = "Collect water deposit data in Catalunia"
authors = ["Vladimir Grebenshchikov <vova@zote.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pdfplumber = "^0.11.5"
# pdfplumber = { version = "*", optional = true }
pandas = "^2.1.4"
prometheus-client = "^0.21.1"
requests = "^2.32.3"
click = "^8.1.8"
openpyxl = "^3.1.5"
protobuf = "^5.29.3"

[tool.poetry.scripts]
embassaments = "embassaments:server.main"
embassaments-import = "embassaments:import_historical_data"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.9"
pandas-stubs = "^2.2.3.241126"
types-requests = "^2.32.0.20250301"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "preserve"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
pattern = '(?P<base>\d+(\.\d+)*)'
format-jinja = """
{%- set major, minor, patch = base.split('.') -%}
{%- if distance -%}
    {%- if patch == '0' -%}
        {{ major }}.{{ minor }}.{{ distance }}+g{{ commit }}
    {%- else -%}
        {{ base }}-{{ distance }}+g{{ commit }}
    {%- endif -%}
{%- else -%}
    {{ base }}
{%- endif -%}
"""